update: new pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Home | Credit Managment App{% endblock title %}
+{% block homeactive %}active{% endblock homeactive %}
+
 {% block body %}
-Hello World!
+
 {% endblock body %}
