--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,10 @@
 {% block homeactive %}active{% endblock homeactive %}
 
 {% block body %}
-
+<div class="jumbotron">
+    <h1 class="display-4">Hello, welcome to the credit manager!</h1>
+    <p class="lead">Transfer the credits of users from one to another in a easy way now!</p>
+    <hr class="my-4">
+    <a class="btn btn-primary btn-lg" href="/transfer_credit" role="button">Take me there</a>
+  </div>
 {% endblock body %}
