--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
       }
       </style>
 
+    {% block style %}{% endblock style %}
+
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
