--- a/templates/transfer.html
+++ b/templates/transfer.html
@@ -5,5 +5,14 @@
 {% block transferactive %}active{% endblock transferactive %}
 
 {% block body %}
-
+<div class="container my-3">
+    <h1 class="text-center">User List</h1>
+    <div class="container my-3">
+        <ol>
+        {% for user in users %}
+            <li><a href="/user/{{user.name}}">{{user.name}}</a> - {{user.current_credit}}</li>
+        {% endfor %}
+        </ol>
+    </div>
+</div>
 {% endblock body %}
