--- a/templates/user.html
+++ b/templates/user.html
@@ -19,7 +19,8 @@
         <p>PAN: {{user.pan}}</p>
         <h5>Current Credits: {{user.current_credit}}</h5>
         <div class="container text-center">
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#details" aria-expanded="false" aria-controls="collapseExample">
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#details"
+                aria-expanded="false" aria-controls="collapseExample">
                 Transfer Credit
             </button>
             <div class="collapse my-2 userform" id="details">
@@ -27,7 +28,8 @@
                     <form action="/user/{{user.name}}" method="POST">
                         {% csrf_token %}
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label text-right">Recipient User<span style="color: red;">*</span>:</label>
+                            <label class="col-sm-3 col-form-label text-right">Recipient User<span
+                                    style="color: red;">*</span>:</label>
                             <select required class="form-control col-sm-8" id="recipient" name="recipient">
                                 <option selected>Select recipient user</option>
                                 {% for usr in users %}
@@ -38,14 +40,15 @@
                             </select>
                         </div>
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label text-right">Credit(s)<span style="color: red;">*</span>:</label>
+                            <label class="col-sm-3 col-form-label text-right">Credit(s)<span
+                                    style="color: red;">*</span>:</label>
                             <input class="col-sm-8" type="number" id="credit" name="credit" required>
                         </div>
                         <button type="submit" class="btn btn-success">Submit</button>
                     </form>
                 </div>
-              </div>
+            </div>
         </div>
     </div>
-  </div>
+</div>
 {% endblock body %}
