--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="alert alert-success alert-dismissible fade show mb-0" role="alert">
-    <strong>Success!</strong> Credits have been sent to {{name}}
+    <strong>Success!</strong> {{credit}} credits have been sent to {{recipient}} from {{name}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
