--- a/templates/user.html
+++ b/templates/user.html
@@ -19,8 +19,8 @@
         <p>PAN: {{user.pan}}</p>
         <h5>Current Credits: {{user.current_credit}}</h5>
         <div class="container text-center">
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#details"
-                aria-expanded="false" aria-controls="collapseExample">
+            <button class="btn btn-primary my-3" type="button" data-toggle="collapse" data-target="#details"
+                aria-expanded="false" aria-controls="collapseExample" title="Transfer credits now!">
                 Transfer Credit
             </button>
             <div class="collapse my-2 userform" id="details">
